# swarm

./: .gitignore  OPENCODE_ENRICHMENT.md  README.md  pyproject.toml  requirements.txt
scripts/: __init__.py
src/: __init__.py
src/agents/: __init__.py
src/config/: __init__.py
src/mcp/: __init__.py  client.py
src/memory/: __init__.py  wrapper.py
src/monitoring/: __init__.py  prometheus.py  sentry.py
src/orchestrator/: __init__.py  agent.py  coordinator.py  orchestrator.py  task.py  task_queue.py  worker_pool.py
src/telegram/: __init__.py
tests/: __init__.py  conftest.py  test_mcp.py  test_memory.py  test_monitoring.py  test_orchestrator.py  test_swarm_orchestrator.py  test_task_queue.py  test_telegram.py  test_worker_pool.py
